<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">
        <!-- top bar -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="49dp"
            android:orientation="horizontal"
            android:background="@color/top_bar_background">
            <ImageView
                android:id="@+id/id_topbar_title_back_icon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="20dp"
                android:src="@drawable/gallery_back_01"
                android:scaleType="center"
                android:layout_centerVertical="true"/>
            <TextView
                android:id="@+id/id_topbar_title"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:text="@string/top_bar_select_n"
                android:textSize="18dp"
                android:layout_toRightOf="@+id/id_topbar_title_back_icon"/>
            <TextView
                android:id="@+id/id_topbar_cancel"
                android:text="@string/top_bar_cancel"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginRight="8dp"
                android:layout_toLeftOf="@+id/id_topbar_select_all"
                android:layout_centerVertical="true"
                android:textColor="@android:color/white"
                android:textSize="10dp"
                android:visibility="invisible"/>
            <TextView
                android:id="@+id/id_topbar_select_all"
                android:text="@string/top_bar_select_all"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_marginRight="16dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:textColor="@android:color/white"
                android:textSize="10dp"
                android:visibility="invisible"/>
        </RelativeLayout>
        <!-- top bar bottom adornment line -->
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:src="@drawable/title_bar_bottom_adornment_line"
            android:scaleType="fitCenter"/>
        <!-- grid view : photo list -->
        <GridView
            android:id="@+id/id_gridview_photo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1.0"
            android:padding="9dp"
            android:verticalSpacing="6dp"
            android:horizontalSpacing="6dp"
            android:numColumns="auto_fit"
            android:columnWidth="80dp"
            android:stretchMode="spacingWidth"
            android:gravity="center"
            android:background="@android:color/white">
        </GridView>
    </LinearLayout>
    <!-- bottom bar -->
        <!-- add to private -->
    <LinearLayout
        android:id="@+id/id_bottom_bar_add2private_root"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_gravity="bottom"
        android:background="@color/bottom_bar_background"
        android:visibility="invisible">
        <TextView
            android:id="@+id/id_bottom_bar_add2private"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:drawableTop="@drawable/bottom_ctrl_add_icon_selector"
            android:drawablePadding="0dp"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/bottom_bar_add2private"
            android:textColor="@android:color/white"
            android:textSize="10dp"
            />
    </LinearLayout>
        <!-- private item action: delete, move, restore -->
    <RelativeLayout android:id="@+id/id_bottom_bar_item_actions_root"
        android:layout_width="match_parent"
        android:layout_height="64dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="#4f4f4f"
        android:orientation="horizontal"
        android:padding="0dp"
        android:scaleType="center"
        android:visibility="invisible"
        android:layout_gravity="bottom">
        <LinearLayout
            android:id="@+id/id_bottom_bar_item_actions_root2"
            style="@android:style/ButtonBar"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentBottom="true"
            android:background="#00000000"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical">
            <TextView
                android:id="@+id/id_bottom_bar_item_actions_del"
                android:layout_width="0.0dip"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:text="@string/bottom_bar_delete"
                android:textSize="10dp"
                android:drawableTop="@drawable/bottom_bar_del_selector"
                android:drawablePadding="3dp"
                android:gravity="center_horizontal"
                android:textColor="#ffffff" />
            <TextView
                android:id="@+id/id_bottom_bar_item_actions_move"
                android:layout_width="0.0dip"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:drawableTop="@drawable/bottom_bar_move_selector"
                android:drawablePadding="3dp"
                android:gravity="center_horizontal"
                android:text="@string/bottom_bar_move"
                android:textColor="#ffffff"
                android:textSize="10dp"
                android:visibility="gone"/>
            <TextView
                android:id="@+id/id_bottom_bar_item_actions_restore"
                android:layout_width="0.0dip"
                android:layout_height="match_parent"
                android:layout_weight="1.0"
                android:text="@string/bottom_bar_restore"
                android:textSize="10dp"
                android:drawableTop="@drawable/bottom_bar_restore_selector"
                android:drawablePadding="3dp"
                android:gravity="center_horizontal"
                android:textColor="#ffffff" />
        </LinearLayout>
    </RelativeLayout>
    <!-- progress bar : cycle progress -->
    <ProgressBar android:id="@+id/id_progress_cycle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:indeterminateTint="@color/top_bar_background"
        android:visibility="invisible"/>
</FrameLayout>